Start call file upload frontend
